--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,11 +1,25 @@
-<h2>{{hero.name | uppercase}} Details</h2>
-<div><span>ID: </span> {{hero.id}}</div>
+<!-- <h2>{{hero.name | uppercase}} Details</h2> -->
+<!-- <div><span>ID: </span> {{hero.id}}</div>
 <br>
-<div><span>Name: </span>{{hero.name}}</div>
+<div><span>Name: </span>{{hero.name}}</div> -->
+
+<!--retrieving a list of heroes using ngFor directive -->
+
+<div  id="hero-container">
+    <h2>MY heroes for Mobile Legends</h2>
+    <ul>
+        <li *ngFor= "let hero of heroes" [class.Selected] = "hero === selectedHero" >
+            <button type="button" (click) = " onSelect(hero)">
+                <span>{{hero.id}}</span>
+                <span>{{hero.name}}</span>
+            </button>
+        </li>
+    </ul>
+</div>
 
 <!-- setting up a two way data binding model with "ngModel" -->
 
-<div class="form-container">
-    <label for="name"> Name: </label>
-    <input  [(ngModel)] = "hero.name" type="text" placeholder="hero Name">
+<div class="form-container" *ngIf="selectedHero">
+    <h2>Name:  {{selectedHero.name}} </h2> <label for="id"> {{selectedHero.id}} </label>
+    <input  [(ngModel)] = "selectedHero.name" type="text" placeholder="hero Name">
 </div>
